# oidc-rs

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: checks.yaml
src/: client.rs  lib.rs  user.rs
src/client/: reqwest.rs  ureq.rs
