[package]
name = "oidc-rs"
authors = ["Galen Guyer <galen@galenguyer.com"]
description = "A generic OIDC client"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/galenguyer/oidc-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
serde = { version = "1.0.139", features = ["derive"] }
cfg-if = "1.0.0"
serde_json = "1.0.82"

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]
optional = true

[dependencies.ureq]
version = "2.5.0"
features = ["json"]
optional = true

[features]
default = []
ureq = ["dep:ureq"]
reqwest = ["dep:reqwest"]
